prepareGame send data to scoreCard via userData : OK

--- a/app/score-card/score-card.tpl.html
+++ b/app/score-card/score-card.tpl.html
@@ -1,8 +1,8 @@
 <h1>Golf Score Card</h1>
-<div>Golf : {{$ctrl.items[0].golf.name}}</div>
-<div>Parcours : {{$ctrl.items[0].parcours.name}}</div>
-<div>Tee : {{$ctrl.items[0].tee.color}}</div>
-<div>Index : {{$ctrl.items[0].index}}</div>
+<div>Golf : {{$ctrl.golf.name}}</div>
+<div>Parcours : {{$ctrl.parcours.name}}</div>
+<div>Tee : {{$ctrl.tee.color}} - SSS : {{$ctrl.tee.sss}} - Slope : {{$ctrl.tee.slope}}</div>
+<div>Index : {{$ctrl.index}}</div>
 <div class="table-responsive">
   <table class="table table-striped table-condensed">
     <thead>
