--- a/app/prepare-game/prepare-game.tpl.html
+++ b/app/prepare-game/prepare-game.tpl.html
@@ -1,5 +1,5 @@
 <form>
-  
+
   <div class="form-group">
     <label for="selectGolf">Select a golf</label>
     <select class="form-control" id="selectGolf" ng-model="$ctrl.selectedGolfName" ng-change="$ctrl.updateParcours()">
@@ -9,7 +9,7 @@
     </select>
     {{$ctrl.selectedGolfName}}
   </div>
-  
+
   <div class="form-group">
     <label for="selectParcours">Select a parcours</label>
     <select class="form-control" id="selectParcours" ng-model="$ctrl.selectedParcoursName" ng-change="$ctrl.updateTees()">
@@ -19,7 +19,7 @@
     </select>
     {{$ctrl.selectedParcoursName}}
   </div>
-  
+
   <div class="form-group">
     <label for="selectTee">Select a tee</label>
     <select class="form-control" id="selectTee" ng-model="$ctrl.selectedTeeColor">
@@ -29,12 +29,12 @@
     </select>
     {{$ctrl.selectedTeeColor}}
   </div>
-  
-  
+
+
   <div class="form-group">
     <label for="inputIdx">Enter index</label>
-    <input type="number" class="form-control" id="inputIdx" placeholder="" min=0 max=54 size=2 ng-model="index" >
+    <input type="number" class="form-control" id="inputIdx" placeholder="" min=0 max=54 size=2 ng-model="$ctrl.golfindex" >
   </div>
-  
+
 </form>
 <a href="/#!/card" class="btn btn-default" ng-click="$ctrl.start()">Start</a>
