ajout du calcul des coups rendus

--- a/app/score-card/score-card.tpl.html
+++ b/app/score-card/score-card.tpl.html
@@ -3,6 +3,7 @@
 <div>Parcours : {{$ctrl.parcours.name}}</div>
 <div>Tee : {{$ctrl.tee.color}} - SSS : {{$ctrl.tee.sss}} - Slope : {{$ctrl.tee.slope}}</div>
 <div>Index : {{$ctrl.index}}</div>
+<div>Coups rendus : {{$ctrl.coupsRendus()}}</div>
 <div class="table-responsive">
   <table class="table table-striped table-condensed">
     <thead>
