calcul du handicap à revoir

--- a/app/score-card/score-card.tpl.html
+++ b/app/score-card/score-card.tpl.html
@@ -23,6 +23,13 @@
         </td>
         <td>{{$ctrl.parTotal}}</td>
       </tr>
+      <tr>
+        <td>Hcp</td>
+        <td ng-repeat="hole in $ctrl.holes">
+          {{hole.hcp}}
+        </td>
+        <td>&nbsp;</td>
+      </tr>
     </thead>
     <tbody>
       <tr>
