Répartition des coups rendus sur la carte de score

--- a/app/score-card/score-card.tpl.html
+++ b/app/score-card/score-card.tpl.html
@@ -30,6 +30,13 @@
         </td>
         <td>&nbsp;</td>
       </tr>
+      <tr>
+        <td>Coups rendus</td>
+        <td ng-repeat="hole in $ctrl.holes">
+          {{hole.coupsRendus}}
+        </td>
+        <td>{{$ctrl.coupsRendus()}}</td>
+      </tr>
     </thead>
     <tbody>
       <tr>
