Trous multi-page OK

--- a/app/prepare-game/prepare-game.tpl.html
+++ b/app/prepare-game/prepare-game.tpl.html
@@ -7,7 +7,6 @@
         {{golf.name}}
       </option>
     </select>
-    {{$ctrl.selectedGolfName}}
   </div>
 
   <div class="form-group">
@@ -17,7 +16,6 @@
         {{parcours.name}}
       </option>
     </select>
-    {{$ctrl.selectedParcoursName}}
   </div>
 
   <div class="form-group">
@@ -27,7 +25,6 @@
         {{tee.color}}
       </option>
     </select>
-    {{$ctrl.selectedTeeColor}}
   </div>
 
 
@@ -37,4 +34,4 @@
   </div>
 
 </form>
-<a href="/#!/card" class="btn btn-default" ng-click="$ctrl.start()">Start</a>
+<a href="/#!/card" class="btn btn-success" ng-click="$ctrl.start()">Start</a>
