--- a/app/score-card/score-card.tpl.html
+++ b/app/score-card/score-card.tpl.html
@@ -1,3 +1,4 @@
+<!--
 <h1>Golf Score Card</h1>
 
 <div class="dropdown">
@@ -11,44 +12,46 @@
     </li>
   </ul>
 </div>
+-->
 
 <div class="tab-content">
 
-  <div ng-repeat="hole in $ctrl.holes | filter:$ctrl.holes.num = 1" role="tabpanel" class="tab-pane active" id="trou{{hole.num}}">
-    <h2>Trou n° {{hole.num}}</h2>
+  <!-- Trous un par un -->
+  <div ng-repeat="hole in $ctrl.holes" role="tabpanel" class="tab-pane" ng-class="{active: hole.num==1}" id="trou{{hole.num}}">
+    <h1>Trou n° {{hole.num}}</h1>
+    <div class="infos">
+      <div class="left">
+        Par {{hole.par}}
+      </div>
+      <div class="right">
+        Hcp {{hole.hcp}}
+      </div>
+      <div class="left">
+        Départ {{$ctrl.tee.color}}
+      </div>
+      <div class="right">
+        {{hole.coupsRendus}} coups rendus
+      </div>
+    </div>
+    <button class="btn btn-default" ng-click="$ctrl.removeStroke(hole.num)"> - </button>
+    <!--
     <input type="number" ng-model="hole.score" ng-change="$ctrl.calculScore()" size=2 max=10 min=0 />
-
-    <ul class="flippy">
-      <li>
-        <button href="#trou{{hole.num-(-1)}}" role="tab" data-toggle="tab" aria-controls="total" aria-expanded="false">Trou suivant</button>
-      </li>
-    </ul>
+    -->
+    <span>{{hole.score}}</span>
+    <button class="btn btn-default" ng-click="$ctrl.addStroke(hole.num)"> + </button>
+    
+    <div class="next">
+      <!--
+      <button href="#trou{{hole.num-1}}" role="tab" data-toggle="tab" aria-controls="total" aria-expanded="false"> &lt; </button>
+      -->
+      <button class="btn btn-success" href="#trou{{hole.num-(-1)}}" ng-if="hole.num < $ctrl.holes.length" role="tab" data-toggle="tab" aria-controls="total" aria-expanded="false">Trou suivant</button>
+      <button class="btn btn-success" href="#total" ng-if="hole.num == $ctrl.holes.length" role="tab" data-toggle="tab" aria-controls="total" aria-expanded="false">Carte de score</button>
+    </div>
   </div>
 
-  <div ng-repeat="hole in $ctrl.holes | filter:(($ctrl.holes.num > 1) && ($ctrl.holes.num < $ctrl.holes.length)) " role="tabpanel" class="tab-pane" id="trou{{hole.num}}">
-    <h2>Trou n° {{hole.num}}</h2>
-    <input type="number" ng-model="hole.score" ng-change="$ctrl.calculScore()" size=2 max=10 min=0 />
-
-    <ul class="flippy">
-      <li>
-        <button href="#trou{{hole.num-(-1)}}" role="tab" data-toggle="tab" aria-controls="total" aria-expanded="false">Trou suivant</button>
-      </li>
-    </ul>
-  </div>
-
-  <div ng-repeat="hole in $ctrl.holes | filter:$ctrl.holes.num = $ctrl.holes.length" role="tabpanel" class="tab-pane" id="trou{{hole.num}}">
-    <h2>Trou n° {{hole.num}}</h2>
-    <input type="number" ng-model="hole.score" ng-change="$ctrl.calculScore()" size=2 max=10 min=0 />
-
-    <ul class="flippy">
-      <li>
-        <button href="#total" role="tab" data-toggle="tab" aria-controls="total" aria-expanded="false">Trou suivant</button>
-      </li>
-    </ul>
-  </div>
-
+  <!-- Affichage Score Total -->
   <div role="tabpanel" class="tab-pane" id="total">
-    <!-- Affichage final -->
+    
     <div>Golf : {{$ctrl.golf.name}}</div>
     <div>Parcours : {{$ctrl.parcours.name}}</div>
     <div>Tee : {{$ctrl.tee.color}} - SSS : {{$ctrl.tee.sss}} - Slope : {{$ctrl.tee.slope}}</div>
