--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,9 @@
 
   <div class="container">
     <div class="row">
-      <div ng-view></div>
+      <div class="col-md-12">
+        <div ng-view></div>
+      </div>
     </div>
   </div>
 
