--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html lang="en" ng-app="golfStats" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" ng-app="golfStats" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="golfStats" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="golfStats" class="no-js" manifest="site.manifest"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="golfStats" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +11,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="bower_components/jquery-ui-bootstrap/jquery.ui.theme.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
@@ -43,8 +45,16 @@
   <script src="score-card/score-card.component.js"></script>
   <script src="prepare-game/prepare-game.module.js"></script>
   <script src="prepare-game/prepare-game.component.js"></script>
+  
+  
+  <script src="modules/golf-course/golf-course.module.js"></script>
+  <script src="modules/golf-course/golf-course.component.js"></script>
+  <script src="modules/golf-course/golf-course-selector.component.js"></script>
+  <script src="modules/golf-course/golf-course.service.js"></script>
+  
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+  
 </body>
 </html>
