'Golf course' en cours de modification

--- a/app/modules/golf-course/golf-course.tpl.html
+++ b/app/modules/golf-course/golf-course.tpl.html
@@ -1,1 +1,9 @@
+hello
+<div ng-repeat="golf in $ctrl.golfs">
+{{golf.name}}
+</div>
+
+<!--
+<golf-selector></golf-selector>
 <golf-course-selector></golf-course-selector>
+-->
