'Golf Course' component OK

--- a/app/index.html
+++ b/app/index.html
@@ -45,17 +45,18 @@
   <script src="score-card/score-card.component.js"></script>
   <script src="prepare-game/prepare-game.module.js"></script>
   <script src="prepare-game/prepare-game.component.js"></script>
-  
-  
+
+
   <script src="modules/golf-course/golf-course.module.js"></script>
   <script src="modules/golf-course/golf-course.component.js"></script>
+  <script src="modules/golf-course/golf-course.controller.js"></script>
   <script src="modules/golf-course/golf-course.service.js"></script>
   <script src="modules/golf-course/golf-selector.component.js"></script>
   <script src="modules/golf-course/course-selector.component.js"></script>
-  
+
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
-  
+
 </body>
 </html>
