'Players' component OK

--- a/app/index.html
+++ b/app/index.html
@@ -39,20 +39,14 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.module.js"></script>
   <script src="app.config.js"></script>
-  <script src="user-data/user-data.module.js"></script>
-  <script src="user-data/user-data.service.js"></script>
-  <script src="score-card/score-card.module.js"></script>
-  <script src="score-card/score-card.component.js"></script>
-  <script src="prepare-game/prepare-game.module.js"></script>
-  <script src="prepare-game/prepare-game.component.js"></script>
-
 
   <script src="modules/golf-course/golf-course.module.js"></script>
   <script src="modules/golf-course/golf-course.component.js"></script>
-  <script src="modules/golf-course/golf-course.controller.js"></script>
   <script src="modules/golf-course/golf-course.service.js"></script>
-  <script src="modules/golf-course/golf-selector.component.js"></script>
-  <script src="modules/golf-course/course-selector.component.js"></script>
+
+  <script src="modules/players/players.module.js"></script>
+  <script src="modules/players/players.component.js"></script>
+  <script src="modules/players/players.service.js"></script>
 
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
