'Score card' module created

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,9 @@
   <script src="modules/players/players.component.js"></script>
   <script src="modules/players/players.service.js"></script>
 
+  <script src="modules/score-card/score-card.module.js"></script>
+  <script src="modules/score-card/score-card.component.js"></script>
+
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
