--- a/app/modules/players/players.tpl.html
+++ b/app/modules/players/players.tpl.html
@@ -8,4 +8,6 @@
 
 <button class="btn btn-default" ng-click="$ctrl.addPlayer()" ng-class="{hidden: $ctrl.players.length>3}">Add a player</button>
 
-<button class="btn btn-success" ng-click="$ctrl.updatePlayersService()">Start Game</button>
+<a href="/#!/golf" class="btn btn-warning" ng-click="$ctrl.updatePlayersService()">Back</a>
+
+<a href="/#!/scorecard" class="btn btn-success" ng-click="$ctrl.updatePlayersService()">Start Game</a>
