calcul des Cr OK

--- a/app/modules/score-card/score-card.tpl.html
+++ b/app/modules/score-card/score-card.tpl.html
@@ -1,6 +1,8 @@
+<!--
 <div>
 Golf: {{$ctrl.golf.name}}<br/>
 Parcours: {{$ctrl.course.name}}
 </div>
+-->
 
-<div ng-repeat="player in $ctrl.players">{{player.name}}</div>
+<div ng-repeat="player in $ctrl.players">{{player.name}} : {{player.cr}} coups rendus</div>
