--- a/app/modules/players/players.tpl.html
+++ b/app/modules/players/players.tpl.html
@@ -3,6 +3,17 @@
 <div class="form-inline" ng-repeat="player in $ctrl.players">
   <input type="text" class="form-control" ng-model="player.name" />
   <input type="text" class="form-control" ng-model="player.index" />
+  <select ng-model="player.tee">
+    <option value="black">Black</option>
+    <option value="white">White</option>
+    <option value="yellow">Yellow</option>
+    <option value="blue">Blue</option>
+    <option value="red">Red</option>
+  </select>
+  <select ng-model="player.sexe">
+    <option value="man">Man</option>
+    <option value="woman">Woman</option>
+  </select>
   <button class="btn btn-danger" ng-click="$ctrl.removePlayer(player.id)" ng-class="{hidden: $ctrl.players.length<2}"> X </button>
 </div>
 
