Calcul des scores OK

--- a/app/modules/score-card/score-card.tpl.html
+++ b/app/modules/score-card/score-card.tpl.html
@@ -4,5 +4,60 @@ Golf: {{$ctrl.golf.name}}<br/>
 Parcours: {{$ctrl.course.name}}
 </div>
 -->
+<div ng-if="!$ctrl.showTotal">
+  <h2>Trou n°{{$ctrl.currentHole}}</h2>
+  <div ng-repeat="player in $ctrl.players" class="form-inline">
+    {{player.name}}
 
-<div ng-repeat="player in $ctrl.players">{{player.name}} : {{player.cr}} coups rendus</div>
+    <button class="btn btn-default" ng-click="$ctrl.removeStroke(player)">-</button>
+    <strong class="h1">{{player.holes[$ctrl.currentHole-1].score}}</strong>
+    <button class="btn btn-default" ng-click="$ctrl.addStroke(player)">+</button>
+
+  </div>
+
+  <button class="btn btn-default" ng-click="$ctrl.prevHole()" ng-if="$ctrl.currentHole > 1">Prev hole</button>
+  <button class="btn btn-default" ng-click="$ctrl.nextHole()" ng-if="$ctrl.currentHole < $ctrl.course.holesCount">Next hole</button>
+  <button class="btn btn-default" ng-click="$ctrl.toggleTotal()">Total</button>
+
+</div>
+
+<div ng-if="$ctrl.showTotal">
+  <div ng-repeat="player in $ctrl.players">
+    {{player.name}} | Stroke: {{player.scoreStroke}} - Stb Brut: {{player.scoreStbBrut}} - Stb Net: {{player.scoreStbNet}}
+
+    <table class="table table-striped table-bordered">
+      <tr>
+        <!--<th>#</th>-->
+        <th ng-repeat="hole in player.holes">
+          {{hole.num}}
+        </th>
+      </tr>
+      <!--
+      <tr>
+        <th>HCP</th>
+        <td ng-repeat="hole in player.holes">
+          {{hole.hcp}}
+        </td>
+      </tr>
+      <tr>
+        <th>CR</th>
+        <td ng-repeat="hole in player.holes">
+          {{hole.cr}}
+        </td>
+      </tr>
+      -->
+      <tr>
+        <!--<th>Score</th>-->
+        <td ng-repeat="hole in player.holes">
+          {{hole.score}}
+        </td>
+      </tr>
+    </table>
+
+  </div>
+
+  <button class="btn btn-default" ng-click="$ctrl.toggleTotal()">Back</button>
+
+  <a href="/#!/" class="btn btn-default">Home page</a>
+
+</div>
