--- a/app/modules/players/players.tpl.html
+++ b/app/modules/players/players.tpl.html
@@ -1,24 +1,24 @@
+<h1>Add players</h1>
 
-
-<div class="form-inline" ng-repeat="player in $ctrl.players">
-  <input type="text" class="form-control" ng-model="player.name" />
-  <input type="text" class="form-control" ng-model="player.index" />
-  <select ng-model="player.tee">
+<div class="form-inline well well-sm" ng-repeat="player in $ctrl.players">
+  <input type="text" class="form-control" ng-model="player.name" placeholder="Nom du joueur"/>
+  <input type="number" class="form-control" ng-model="player.index" placeholder="Index" min="0" max="54"/>
+  <select ng-model="player.tee" class="form-control">
     <option value="black">Black</option>
     <option value="white">White</option>
     <option value="yellow">Yellow</option>
     <option value="blue">Blue</option>
     <option value="red">Red</option>
   </select>
-  <select ng-model="player.sexe">
+  <select ng-model="player.sexe" class="form-control">
     <option value="man">Man</option>
     <option value="woman">Woman</option>
   </select>
   <button class="btn btn-danger" ng-click="$ctrl.removePlayer(player.id)" ng-class="{hidden: $ctrl.players.length<2}"> X </button>
 </div>
 
-<button class="btn btn-default" ng-click="$ctrl.addPlayer()" ng-class="{hidden: $ctrl.players.length>3}">Add a player</button>
-
+<button class="btn btn-default btn-block" ng-click="$ctrl.addPlayer()" ng-class="{hidden: $ctrl.players.length>3}">Add a player</button>
+<br/>
 <a href="/#!/golf" class="btn btn-warning" ng-click="$ctrl.updatePlayersService()">Back</a>
 
-<a href="/#!/scorecard" class="btn btn-success" ng-click="$ctrl.updatePlayersService()">Start Game</a>
+<a href="/#!/scorecard" class="btn btn-success pull-right" ng-click="$ctrl.updatePlayersService()">Start Game</a>
