blocage du zoom, modif du title et ajout jquery ui css

--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Golf Scorer v0.1</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/jquery/jquery.min.js"></script>
   <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
