--- a/app/modules/players/players.tpl.html
+++ b/app/modules/players/players.tpl.html
@@ -1,4 +1,6 @@
-<h1>Add players</h1>
+<div class="page-header text-center">
+  <h1>Add players</h1>
+</div>
 
 <div class="form-inline well well-sm" ng-repeat="player in $ctrl.players">
   <input type="text" class="form-control" ng-model="player.name" placeholder="Nom du joueur"/>
