--- a/app/index.html
+++ b/app/index.html
@@ -8,11 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Golf Scorer v0.1</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css">
-  <link rel="stylesheet" href="app.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <link rel="stylesheet" href="dist/styles.css">
   <script src="bower_components/jquery/jquery.min.js"></script>
   <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
@@ -30,30 +27,7 @@
       </div>
     </div>
   </div>
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="app.module.js"></script>
-  <script src="app.config.js"></script>
-
-  <script src="modules/golf-course/golf-course.module.js"></script>
-  <script src="modules/golf-course/golf-course.component.js"></script>
-  <script src="modules/golf-course/golf-course.service.js"></script>
-
-  <script src="modules/players/players.module.js"></script>
-  <script src="modules/players/players.component.js"></script>
-  <script src="modules/players/players.service.js"></script>
-
-  <script src="modules/score-card/score-card.module.js"></script>
-  <script src="modules/score-card/score-card.component.js"></script>
-
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
-
+  
+  <script src="dist/scripts.js"></script>
 </body>
 </html>
