--- a/app/modules/golf-course/golf-course.tpl.html
+++ b/app/modules/golf-course/golf-course.tpl.html
@@ -8,7 +8,7 @@
   A moment, please,<br/>golfs list is being loaded...
   </div>
 
-  <div class="form-group" ng-class="{hidden: !$ctrl.golfsListReady}">
+  <div class="form-group form-group-lg" ng-class="{hidden: !$ctrl.golfsListReady}">
     <input class="form-control" type="text" id="searchGolf" ng-model="$ctrl.golfClub.name" placeholder="Enter golf name"/>
   </div>
 
