Modification de la connexion à l'API

--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,10 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="stylesheet" href="dist/styles.css">
-  <script src="bower_components/jquery/jquery.min.js"></script>
+  <!--<script src="bower_components/jquery/jquery.min.js"></script>
   <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  -->
 </head>
 <body>
 
