--- a/app/modules/players/players.tpl.html
+++ b/app/modules/players/players.tpl.html
@@ -1,57 +1,59 @@
 <div class="page-header text-center">
-  <h1>Add players</h1>
+  <h1>Set players</h1>
 </div>
 
-<div class="form-inline well well-sm text-center" ng-repeat="player in $ctrl.players">
-  <div class="form-group">
+<div class="form-inline well well-sm text-center player-add-player-form" ng-repeat="player in $ctrl.players">
+  <div class="form-group player-name">
     <input type="text" class="form-control" ng-model="player.name" placeholder="Nom du joueur"/>
   </div>
   
-  <div class="form-group">
+  <div class="form-group player-index">
     <input type="number" class="form-control" ng-model="player.index" placeholder="Index" min="0" max="54"/>
   </div>
   
-  <div class="form-group">
+  <div class="form-group player-gender">
     <div class="btn-group" data-toggle="buttons">
-      <label class="btn btn-default teeBlack" ng-class="{active: player.tee == 'black'}">
-        <input type="radio" ng-name="tee+$player.id" value="black" ng-model="player.tee">&nbsp;
-      </label>
-      <label class="btn btn-default teeWhite" ng-class="{active: player.tee == 'white'}">
-        <input type="radio" ng-name="tee+$player.id" value="white" ng-model="player.tee">&nbsp;
-      </label>
-      <label class="btn btn-default teeYellow" ng-class="{active: player.tee == 'yellow'}">
-        <input type="radio" ng-name="tee+$player.id" value="yellow" ng-model="player.tee">&nbsp;
-      </label>
-      <label class="btn btn-default teeBlue" ng-class="{active: player.tee == 'blue'}">
-        <input type="radio" ng-name="tee+$player.id" value="blue" ng-model="player.tee">&nbsp;
-      </label>
-      <label class="btn btn-default teeRed" ng-class="{active: player.tee == 'red'}">
-        <input type="radio" ng-name="tee+$player.id" value="red" ng-model="player.tee">&nbsp;
-      </label>
-    </div>
-  </div>
-  
-  <div class="form-group">
-    <div class="btn-group" data-toggle="buttons">
-      <label class="btn btn-primary" ng-class="{active: player.gender == 'man'}">
+      <label class="btn btn-default man" ng-class="{active: player.gender == 'man'}">
         <input type="radio" ng-name="gender+$player.id" value="man" ng-model="player.gender"> ♂
       </label>
-      <label class="btn btn-primary" ng-class="{active: player.gender == 'woman'}">
+      <label class="btn btn-default woman" ng-class="{active: player.gender == 'woman'}">
         <input type="radio" ng-name="gender+$player.id" value="woman" ng-model="player.gender"> ♀
       </label>
     </div>
   </div>
   
-  <div class="form-group">
-    <div class="btn-group">
-      <button class="btn btn-danger" ng-click="$ctrl.removePlayer(player.id)" ng-class="{hidden: $ctrl.players.length<2}"> X </button>
+  <div class="form-group player-tee">
+    <div class="btn-group" data-toggle="buttons">
+      <label class="btn teeBlack" ng-class="{active: player.tee == 'black'}">
+        <input type="radio" ng-name="tee+$player.id" value="black" ng-model="player.tee">&nbsp;
+      </label>
+      <label class="btn teeWhite" ng-class="{active: player.tee == 'white'}">
+        <input type="radio" ng-name="tee+$player.id" value="white" ng-model="player.tee">&nbsp;
+      </label>
+      <label class="btn teeYellow" ng-class="{active: player.tee == 'yellow'}">
+        <input type="radio" ng-name="tee+$player.id" value="yellow" ng-model="player.tee">&nbsp;
+      </label>
+      <label class="btn teeBlue" ng-class="{active: player.tee == 'blue'}">
+        <input type="radio" ng-name="tee+$player.id" value="blue" ng-model="player.tee">&nbsp;
+      </label>
+      <label class="btn teeRed" ng-class="{active: player.tee == 'red'}">
+        <input type="radio" ng-name="tee+$player.id" value="red" ng-model="player.tee">&nbsp;
+      </label>
     </div>
+  </div>
+  
+  <div class="btn-group pull-right">
+    <button class="btn btn-danger" ng-click="$ctrl.removePlayer(player.id)" ng-class="{hidden: $ctrl.players.length<2}"> X </button>
   </div>
   
 </div>
 
-<button class="btn btn-default btn-block" ng-click="$ctrl.addPlayer()" ng-class="{hidden: $ctrl.players.length>3}">Add a player</button>
-<br/>
-<a href="/#!/golf" class="btn btn-warning" ng-click="$ctrl.updatePlayersService()">Back</a>
+<div class="form-group">
+  <button class="btn btn-default btn-block" ng-click="$ctrl.addPlayer()" ng-class="{hidden: $ctrl.players.length>3}">Add a player</button>
+</div>
 
-<a href="/#!/scorecard" class="btn btn-success pull-right" ng-click="$ctrl.updatePlayersService()">Start Game</a>
+<div class="form-group">
+  <a href="/#!/golf" class="btn btn-warning" ng-click="$ctrl.updatePlayersService()">Back</a>
+
+  <a href="/#!/scorecard" class="btn btn-success pull-right" ng-click="$ctrl.updatePlayersService()">Start Game</a>
+</div>
