--- a/app/modules/score-card/score-card.tpl.html
+++ b/app/modules/score-card/score-card.tpl.html
@@ -4,9 +4,9 @@ Golf: {{$ctrl.golf.name}}<br/>
 Parcours: {{$ctrl.course.name}}
 </div>
 -->
-<div ng-if="!$ctrl.showTotal" class="text-center">
-  <div class="page-header">
-    <h2>Hole {{$ctrl.currentHole}}<br/><small>Par {{$ctrl.course.tees[0].holes[$ctrl.currentHole].par}} - Hcp {{$ctrl.course.tees[0].holes[$ctrl.currentHole].hcp}}</small></h2> 
+<div ng-if="!$ctrl.showTotal">
+  <div class="page-header text-right">
+    <h2><span class="pull-left">Hole {{$ctrl.currentHole}}</span><small>Par {{$ctrl.course.tees[0].holes[$ctrl.currentHole].par}}<br/>Hcp {{$ctrl.course.tees[0].holes[$ctrl.currentHole].hcp}}</small></h2> 
   </div>
 
   <div ng-repeat="player in $ctrl.players" class="form-inline well well-sm text-right score-card-hole">
