--- a/app/modules/golf-course/golf-course.tpl.html
+++ b/app/modules/golf-course/golf-course.tpl.html
@@ -8,6 +8,15 @@
   A moment, please,<br/>golfs list is being loaded...
   </div>
 
+  <div ng-if="$ctrl.golfsILScount > 0">
+	<h2>Favorites</h2>
+    <a class="btn btn-brand btn-block"
+     ng-repeat="golf in $ctrl.golfsInLocalStorage"
+     ng-click="$ctrl.setGolfClub(golf)">
+       {{golf.name}}
+	</a>
+  </div>
+
   <div class="form-group form-group-lg" ng-class="{hidden: !$ctrl.golfsListReady}">
     <input class="form-control" type="text" id="searchGolf" ng-model="$ctrl.golfClub.name" placeholder="Enter golf name"/>
   </div>
@@ -19,5 +28,6 @@
      ng-click="$ctrl.submit(course.code)">
       {{course.name}}
   </a>
-
+  
+  
 </div>
